--- a/notebooks/projet_clustering.ipynb
+++ b/notebooks/projet_clustering.ipynb
@@ -6,9 +6,8 @@
       "provenance": [],
       "collapsed_sections": [
         "thcA0dKXfjih",
-        "rgbQWCg8yx5v",
-        "XlH8qz84fx0m",
-        "V9-kb1QeFXGm"
+        "VYor-9lr3kBq",
+        "9d7qrAj7BEAv"
       ],
       "toc_visible": true
     },
@@ -1548,36 +1547,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Convert the PySpark DataFrame to a Pandas DataFrame.\n",
-        "data_finale = data_finale.toPandas()\n",
-        "\n",
-        "# Save the Pandas DataFrame to a CSV file.\n",
-        "data_finale.to_csv('données_intermédiaires.csv', index=False)"
-      ],
-      "metadata": {
-        "id": "a5v7aAgXo50f"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Convert the PySpark DataFrame to a Pandas DataFrame.\n",
-        "data_pca = data_pca.toPandas()\n",
-        "\n",
-        "# Save the Pandas DataFrame to a CSV file.\n",
-        "data_pca.to_csv('données_finales.csv', index=False)"
-      ],
-      "metadata": {
-        "id": "8H7CYMZuqO6q"
-      },
-      "execution_count": 37,
-      "outputs": []
     }
   ]
 }
